--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>vue-abcjs-editor-demo</title>
-	<script src="https://use.fontawesome.com/491e16d960.js"></script>
-	<link href="https://use.fontawesome.com/491e16d960.css" media="all" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
